tests/baselines/reference/destructuringTypeAssertionsES5_3(target=es2015).errors.txt
destructuringTypeAssertionsES5_3.ts(1,19): error TS2304: Cannot find name 'foo'.


==== destructuringTypeAssertionsES5_3.ts (1 errors) ====
    var { x } = <any>(foo());
                      ~~~
!!! error TS2304: Cannot find name 'foo'.